# plox

./: CMakeLists.txt  run_tests.py
clox/: chunk.c  chunk.h  common.h  compiler.c  compiler.h  debug.c  main.c  memory.c  memory.h  object.c  object.h  scanner.c  scanner.h  table.c  table.h  value.c  value.h  vm.c  vm.h
plox/: ast_printer.py  environment.py  expr.py  interpreter.py  lox.py  lox_bool.py  lox_callable.py  lox_class.py  lox_function.py  lox_instance.py  parser.py  plox_errors.py  resolver.py  scanner.py  stmt.py  token.py  token_type.py
scripts/: chapter8_challenge3.lox  class.lox  closure.lox  closure2.lox  concatenation.lox  debug.lox  fun.lox  gc.lox  lexeme.lox  myscript.txt  subscript.lox  test_anonymous_function.lox  test_class.lox  test_for.lox  test_fun.lox  test_if.lox  test_inheritance.lox  test_method_binding.lox  test_while.lox  utf8.lox
scripts/inheritance/: test_superclass_must_be_class.lox
test/: precedence.lox.out  unexpected_character.lox.cout  unexpected_character.lox.out
test/assignment/: prefix_operator.lox.out  to_this.lox.out  undefined.lox.out
test/benchmark/: equality.lox
test/break/: at_top_level.lox.cout  at_top_level.lox.out  break.lox  break.lox.cout  break.lox.out  nested.lox  nested.lox.cout
test/call/: num.lox.out  object.lox.out
test/class/: inherit_self.lox.out  local_inherit_self.lox.cout  local_inherit_self.lox.out
test/closure/: reuse_closure_slot.lox.out  unused_closure.lox.out  unused_later_closure.lox.out
test/constructor/: call_init_early_return.lox.out  (+5 more)
tool/: fib.c  fib.py  generate_ast.py
(+116 files in other folders)
